--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
 		}
 	],
 	"require" : {
-		"yiisoft/yii2" : "*",
-		"yiisoft/yii2-bootstrap" : "*",
-		"kartik-v/yii2-grid" : "@dev"
+		"yiisoft/yii2" : "^2.0.5",
+		"yiisoft/yii2-bootstrap" : "@dev"
 	},
 	"autoload" : {
 		"psr-4" : {
